--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div id="socials-container">
             <a target="_blank" href="https://www.linkedin.com/" rel="noopener">
-                <img decoding="async" src="/assets/linkedin.png" alt="My LinkedIn profile" class="icon" />
+                <img decoding="async" src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" />
             </a>
 
           <a target="_blank" href="https://github.com/" rel="noopener">
